Footer fix on mobile-4

--- a/css/style.css
+++ b/css/style.css
@@ -489,6 +489,6 @@ a {
   }
   #copyright {
     visibility: hidden;
-    position: absolute;
+    position: fixed;
   }
 }
